fix spacing of sprint cards

--- a/src/sprint/SprintContainer.module.scss
+++ b/src/sprint/SprintContainer.module.scss
@@ -7,11 +7,11 @@
     margin: 2rem;
     padding: 1rem;
     min-width: 20rem;
+    justify-content: center;
     
     @media (min-width: $tablet){
         flex-direction: initial;
         flex-wrap: wrap;
-        justify-content: space-between;
         // :not(:first-child) {
         //     background-color: #900;
         // }
